<?xml version="1.0"?>
<package format="2">
  <name>mpl_test_node</name>
  <version>0.0.1</version>
  <description>The mpl_test_node package</description>
  <maintainer email="sikang@seas.upenn.edu">sikang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>motion_primitive_library</build_depend>
  <build_depend>decomp_ros_msgs</build_depend>
  <build_depend>decomp_ros_utils</build_depend>
  <build_depend>planning_ros_msgs</build_depend>
  <build_depend>planning_ros_utils</build_depend>

</package>
